--- a/chat/room.html
+++ b/chat/room.html
@@ -1,18 +1,17 @@
 <style>
-   li a { padding-right:20px}
+   a { margin-left:20px}
    </style>
 
 
 <div class="card card-block py-2" >
-{{control.username}}
-  <input type="text" class="form-control" ng-model="control.username">
-  <h2><div >{{chat_error}}</div></h2>
-  <a class="btn btn-success col-sm-3" ng-click="control.sonoUser(control.username)">ENTRA</a>
-  <ul class="row col-sm-12 mx-5">
-    <li><a class="btn btn-info col-sm-3" ng-click="control.sonoPaperino()">IDENTITA GIOVA</a></li>
-    <li><a class="btn btn-success col-sm-3" ng-click="control.sonoMaster()">TUTTO FAI</a></li>
+  <input placeholder="Pick a username." type="text" class="form-control" ng-model="control.username">
+  <span style="color:red">{{chat_error}}</span>
+  <div class="row col-sm-6 col-lg-12 px-2">
+    <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoUser(control.username)">ENTRA</a>
+    <a class="btn btn-info col-sm-3 py-2" ng-click="control.sonoPaperino()">Enter as Donal Duck</a>
+    <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoMaster()">Enter as Mkicker</a>
 
-  </ul>
+  </div>
   {{tutti_utenti|json}}
   <ul class="row">
     <li ng-repeat="user in tutti_utenti">
@@ -28,6 +27,6 @@
 
   <br/>
   <my-messanger></my-messanger>
-  <a class="btn btn-block btn-default" ng-click="reset()">RESET CHAT</a>
+  <a class="btn btn-block btn-info" href="mailto:claudio.bagnato@gmail.com?subject=wtf I like it">DROP ME SOMEHTING</a>
 
 </div>
