--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="css/font-awesome.4.6.3.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic" rel="stylesheet">
   <link href="css/chat_styles.css" rel="stylesheet">
+  <link href="css/chat2.css" rel="stylesheet">
   <style type="text/css">
   ul li a{ display:block;
     cursor: pointer;
@@ -51,7 +52,7 @@
 
   <div class="container">
 
-    <div ng-view id="ng-view" style="margin-top:300px"></div>
+    <div ng-view id="ng-view" style="margin-top:80px"></div>
 
   </div>
   <script src="js/jquery.3.1.0.min.js"></script>
