--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link href="css/bootstrap.css" rel="stylesheet">
 
   <link href="css/font-awesome.4.6.3.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,100italic" rel="stylesheet">
-  <link href="css/chat_styles.css" rel="stylesheet">
-  <link href="css/chat2.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Courier:400,300,100,100italic" rel="stylesheet">
+  <link href="css/movie_styles.css" rel="stylesheet">
+  <link rel="stylesheet"; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
+
   <style type="text/css">
   ul li a{ display:block;
     cursor: pointer;
@@ -52,7 +53,7 @@
 
   <div class="container">
 
-    <div ng-view id="ng-view" style="margin-top:80px"></div>
+    <div ng-view  style="margin-top:80px"></div>
 
   </div>
   <script src="js/jquery.3.1.0.min.js"></script>
@@ -64,6 +65,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-messages.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-animate.js"></script>
   <script src="js/ui-bootstrap-tpls-2.2.0.min.js"></script>
+  <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
+
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-firestore.js"></script>
@@ -85,5 +88,7 @@
 <script src="app/app.js"></script>
 
 <script src="chat/chatController.js"></script>
+<script src="data.js"></script>
+<script src="movie/movieController.js"></script>
 </body>
 </html>
