--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="css/font-awesome.4.6.3.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courier:400,300,100,100italic" rel="stylesheet">
   <link href="css/movie_styles.css" rel="stylesheet">
-  <link rel="stylesheet"; href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
-
+  <link rel="stylesheet" href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
+  <link href="css/chat2.css" rel="stylesheet">
   <style type="text/css">
   ul li a{ display:block;
     cursor: pointer;
@@ -72,6 +72,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-firestore.js"></script>
   <!-- AngularFire -->
   <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+  <script src="js/airbrake.js"></script>
   <script>
   // Initialize Firebase
   var config = {
@@ -90,5 +91,7 @@
 <script src="chat/chatController.js"></script>
 <script src="data.js"></script>
 <script src="movie/movieController.js"></script>
+<script src="movie/batch.js"></script>
+
 </body>
 </html>
