--- a/chat/room.html
+++ b/chat/room.html
@@ -4,9 +4,10 @@
 
 
 <div class="card card-block py-2" >
-  <input placeholder="Pick a username." type="text" class="form-control" ng-model="control.username">
-  <span style="color:red">{{chat_error}}</span>
-  <div class="row col-sm-6 col-lg-12 px-2">
+  <h1 class="text-white bg-info mx-auto px-2" >Nice to meet you, fish</h1>
+  <input placeholder="Pick a username." type="text" class="mx-auto m-2 form-control" ng-model="control.username">
+  <span class="text-warning">{{chat_error}}</span>
+  <div class="row col-sm-6 col-lg-12 px-2 mt-2">
     <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoUser(control.username)">ENTRA</a>
     <a class="btn btn-info col-sm-3 py-2" ng-click="control.sonoPaperino()">Enter as Donal Duck</a>
     <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoMaster()">Enter as Mkicker</a>
@@ -27,6 +28,6 @@
 
   <br/>
   <my-messanger></my-messanger>
-  <a class="btn btn-block btn-info" href="mailto:claudio.bagnato@gmail.com?subject=wtf I like it">DROP ME SOMEHTING</a>
+  <a class="btn btn-block btn-info mx-auto" href="mailto:claudio.bagnato@gmail.com?subject=wtf I like it">DROP ME SOMEHTING</a>
 
 </div>
