--- a/chat/messager.html
+++ b/chat/messager.html
@@ -83,7 +83,7 @@ footer {
       <div class="emoji">
         <i class="fa fa-smile-o fa-2x"></i>
       </div>
-      <input class="my-4 cl-tooltip" name="text" ng-model="control.text" placeholder="Type a message" autofocus required><!--ng-init="control.text='blabla'" ng-required-->
+      <input class="cl-tooltip" name="text" ng-model="control.text" placeholder="Type a message" autofocus required><!--ng-init="control.text='blabla'" ng-required-->
       <div class="photo">
         <i class="fa fa-user"></i>
       </div>
