--- a/movie/movieDetail.html
+++ b/movie/movieDetail.html
@@ -7,7 +7,7 @@
 
 }
 .thumbnail{
-  transition-duration: .5s ease-out all;
+  transition-duration: .62s ease-out all;
 }
 .thumbnail img{
   width:200px;
@@ -45,14 +45,14 @@ img {
   max-width:500px;
 }
 .thumbnail {
-  transition-duration: 1s;
+  transition-duration: 0.62s;
 }
 
 .iverposed {
   position:absolute;
   top:0;
   opacity: 0;
-  transition-duration: 1s;
+  transition-duration: .62s;
 }
 
 .thumbnail:hover {
