--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link href="css/font-awesome.4.6.3.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Courier:400,300,100,100italic" rel="stylesheet">
   <link href="css/movie_styles.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.css">
   <link href="css/chat2.css" rel="stylesheet">
   <style type="text/css">
   ul li a{ display:block;
@@ -65,9 +64,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-messages.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-animate.js"></script>
   <script src="js/ui-bootstrap-tpls-2.2.0.min.js"></script>
-  <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
-
-  <!-- Firebase -->
+    <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-firestore.js"></script>
   <!-- AngularFire -->
@@ -92,6 +89,8 @@
 <script src="data.js"></script>
 <script src="movie/movieController.js"></script>
 <script src="movie/batch.js"></script>
+<script src="js/threadpool.js"></script>
+<script src="caps/caps.js"></script>
 
 </body>
 </html>
