--- a/movie/batch.html
+++ b/movie/batch.html
@@ -1,4 +1,17 @@
-<div class=="card card-heading">
+
+<blockquote class="my-2">
+  <p>“carpe diem prima che diem carpa te.“ <br/>
+    “ma CHE CAZZU VOLI QCHISTU
+    QUINDI 10 EURO 1 MESE , NO ! 20 EURO 40 GB ! 1 MESE ! MI RRIVANO I MODEM CHE LI HO TERMINATI.“
+  </p>
+  <footer>
+    <small><i> Claudio su iornata </i></small>
+  </footer>
+
+</blockquote>
+
+
+<div class=="card card-heading" data-ng-init="bla()">
   <div class="card-body">
     <input class="bottom-marg-15" type="file" name="file" file></input>
     <!-- Progress Bar -->
@@ -7,7 +20,12 @@
         {{ uploadProgress == 0 ? '' : uploadProgress + '%' }}
       </div>
     </div>
-    <a class="btn btn-primary btn-block btn-lg" ng-click="upload()">Upload</a>
+    <a class="btn btn-primary btn-block btn-lg" ng-click="bla())">Upload</a>
   </div>
-  <h4>{{uploadTotal}}</h4>
+  <h4>{{uploadPrgress }} {{uploadTotal}}</h4>
+  <h4><a href="{{docu}}">hyee</a></h4>
+  <h4>{{outputText}}</h4>
+  {{sample}}
 </div>
+
+https://cors-anywhere.herokuapp.com/https://plusone.google.com/_/+1/fastbutton?url=https%3A%2F%2Faltadefinizione.pink%2Fblack-panther-stream%2F
