--- a/movie/movieDetail.html
+++ b/movie/movieDetail.html
@@ -115,10 +115,11 @@ img {
 </div>
 </div>
 </section> -->
+<div class="progress-bar progress-bar-striped progress-bar-animated" style="width:{{progress}}%"></div>
 <div class="panel bg-light">
   <div class="navbar navbar-collapse" >
     <div class="nav-item" style="vertical-align:baseline">
-      <i class="fa fa-film fa-4x"></i>
+      <span class="text-wrap"><i class="fa fa-film fa-4x"> <strong>{{data.length}}</strong>movies</i>
     </div>
 
     <div class="nav-item">
