--- a/movie/batch.html
+++ b/movie/batch.html
@@ -15,12 +15,8 @@
   <div class="card-body">
     <input class="bottom-marg-15" type="file" name="file" file></input>
     <!-- Progress Bar -->
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="{{ uploadProgress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ uploadProgress }}%;">
-        {{ uploadProgress == 0 ? '' : uploadProgress + '%' }}
-      </div>
-    </div>
-    <a class="btn btn-primary btn-block btn-lg" ng-click="bla())">Upload</a>
+
+    <a class="btn btn-primary btn-block btn-lg" ng-click="upload()">Upload</a>
   </div>
   <h4>{{uploadPrgress }} {{uploadTotal}}</h4>
   <h4><a href="{{docu}}">hyee</a></h4>
