--- a/burps/burps.html
+++ b/burps/burps.html
@@ -1,17 +1,69 @@
-<div class="card text-sm-center">
+<style>
+  .box.ng-enter{
+        -webkit-animation: tinywalk 600ms ease-out;
+        animation: tinywalk 600ms ease-out;
+      }
+  .box.ng-leave{
+    -webkit-animation: tinywalk 600ms ease-in reverse;
+    animation: tinywalk 600ms ease-in reverse;
+  }
+  @keyframes tinywalk {
+        0%{ transform: translate(30%);opacity:0;}
+
+        100%{ transform: translate(0);opacity:1}
+      }
+</style>
+
+
+<div class="card">
   <div class="card-header">
     <h4>Lottare</h4><small>inutile resistere</small>
-  </div>
-  <div class="card body my-2 px-2 py-2">
+    </div>
+  <div class="card body my-2 px-2 py-2" ng-init="main.active = 0">
     <!-- che tale e la natura dell'universo -->
     <!-- una bimba che grida mamma in filippino -->
     <!-- un bimbo nero che gioca sul balcone tra scarti di televisore -->
     <!-- nell'attesa che arrivi la soddisfazione -->
     <form name="form">
-<cl-upload file-input="file" on-change="readFile()"></cl-upload>
-      <button class="btn btn-info" type="button" ng-click="main.done(image)">BUTTON</button>
-      <img src="{{image}}">
-</form>
+      Single Image with validations
+      <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'"
+        ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
+        ngf-resize="{width: 100, height: 100}">Select</div>
+    </form>
+   
+    <form name="form">
+    <i><label for="input_image">Dog Pic</label></i>
+    <cl-upload file-input="file" on-change="readFile()" name="input_image" ></cl-upload>
+      <button class="btn btn-info" type="button" ng-click="main.active = !main.active" >BUTTON</button>
+      {{image_output}}
+    </form>
+    <!-- <a class="btn btn-block btn-info" ng-click="main.cleanup()">MANDA</a> -->
+   
+    <div class="row col-sm-12 mt-5">
+      <div class="card col-sm-8">
+      <div class="card-block my-2 pa-2" >
+        <img ng-if="main.active" class="box img-responsive img-auto" src="{{thecat}}">
+      </div>
+    </div>
+      <div class="card col-sm-4">
+          <div class="card-block my-2 pa-2" >
+            <div ng-repeat="testo in main.testi track by $index"  style="font-size:28px">
+              <div ng-if="$index != 2"><i>{{testo}}</i></div>
+              <div ng-if="$index == 2"><b><i>{{testo}}</i></b></div>
+            </div>
+        </div>
+      </div>
+      </div>
 
+
+
+
+
+
+
+    </div>
 
   </div>
+  <h1>{{userLogged}}</h1>
+  <code><pre>{{ data }}</pre></code>
+   
