--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <script src="partials/shared/modal.js"></script>
 <script src="app/app.js"></script>
-<script src="direttova.js"></script>
+<script src="app/factory/geoservice.js"></script>
 <script src="app/ngprogress.min.js"></script>
 
 <script src="chat/chatController.js"></script>
