step 1 upload client- rimosso metadata- firestore autodetect - manual to step2

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     .sfondo  {
       background: linear-gradient(to bottom, #444, #EEE);
     }
+    pre {
+      font-weight: bold;
+      font-size:22px;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
     </style>
     <title>{{title}}</title>
   </head>
@@ -61,7 +66,7 @@
 
   </div>
   </body>
-  
+
   <script src="js/jquery.3.1.0.min.js"></script>
   <!-- <script src="https://unpkg.com/popper.js"></script> -->
   <script scr="https://cdnjs.com/libraries/popper.js"></script><!-- <script src="js/bootstrap.4.0.0-alpha.3.min.js"></script> -->
@@ -78,7 +83,7 @@
   <!-- AngularFire -->
   <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
   <script src="https://cdn.firebase.com/libs/geofire/4.1.2/geofire.min.js"></script>
-  
+
   <script>
   // Initialize Firebase
   var config = {
@@ -97,6 +102,7 @@
 
 <script src="partials/shared/modal.js"></script>
 <script src="app/app.js"></script>
+<script src="app/direttiva.js"></script>
 <script src="app/factory/geoservice.js"></script>
 <script src="app/ngprogress.min.js"></script>
 
@@ -107,4 +113,6 @@
 <script src="js/threadpool.js"></script>
 <script src="caps/caps.js"></script>
 <script src="burps/burps.js"></script>
+
+<script src="kikass/kikass.js"></script>
 </html>
