--- a/burps/burps.html
+++ b/burps/burps.html
@@ -12,10 +12,19 @@
 
         100%{ transform: translate(0);opacity:1}
       }
+  .text_order.ng-enter {
+        -webkit-animation: walk 1000ms ease;
+        animation: walk 1000ms ease;
+  }
+  @keyframes walk {
+        0% { transform: translate(30%);opacity:0;}
+        30%{ transform: translate(30%);opacity:0}
+        100%{transform: translate(0);opacity:1}
+  }
 </style>
 
 
-<div class="card">
+<div class="card" id="anchor_progress">
   <div class="card-header">
     <h4>Lottare</h4><small>inutile resistere</small>
     </div>
@@ -30,30 +39,34 @@
         ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100"
         ngf-resize="{width: 100, height: 100}">Select</div>
     </form>
-   
+    <br/>
     <form name="form">
-    <i><label for="input_image">Dog Pic</label></i>
-    <cl-upload file-input="file" on-change="readFile()" name="input_image" ></cl-upload>
+    
+    <cl-upload file-input="file" on-change="readFile()" name="input_image" >SCEGLI FOTO</cl-upload>
       <button class="btn btn-info" type="button" ng-click="main.active = !main.active" >BUTTON</button>
-      {{image_output}}
+      <br/>{{out_url}}
     </form>
     <!-- <a class="btn btn-block btn-info" ng-click="main.cleanup()">MANDA</a> -->
-   
+
     <div class="row col-sm-12 mt-5">
       <div class="card col-sm-8">
       <div class="card-block my-2 pa-2" >
-        <img ng-if="main.active" class="box img-responsive img-auto" src="{{thecat}}">
+        <img ng-if=" upload_complete" class="box img-responsive img-auto" src="{{thecat}}">
       </div>
     </div>
       <div class="card col-sm-4">
           <div class="card-block my-2 pa-2" >
-            <div ng-repeat="testo in main.testi track by $index"  style="font-size:28px">
+            <div ng-repeat="testo in main.testi track by $index"  style="font-size:28px" class="text_order" ng-if="main.active">
               <div ng-if="$index != 2"><i>{{testo}}</i></div>
               <div ng-if="$index == 2"><b><i>{{testo}}</i></b></div>
             </div>
         </div>
       </div>
       </div>
+      <div>
+        <a class="btn btn-block btn-success" ng-if="upload_complete" ng-click="main.procedi()">PROSEGUI PASSO SSUCCESSIVO</a>
+      </div>
+
 
 
 
@@ -66,4 +79,3 @@
   </div>
   <h1>{{userLogged}}</h1>
   <code><pre>{{ data }}</pre></code>
-   
