cleaned chat style, cloudvision labeldetection bozza test

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   var db = firebase.firestore();
   console.log(db);
 </script>
+<script src="js/angular-sticky.min.js"></script>
 <script src="app/ng-file-upload.min.js"></script>
 
 <script src="partials/shared/modal.js"></script>
