--- a/chat/room.html
+++ b/chat/room.html
@@ -9,8 +9,8 @@
   <span class="text-warning">{{chat_error}}</span>
   <div class="row col-sm-6 col-lg-12 px-2 mt-2">
     <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoUser(control.username)">ENTRA</a>
-    <a class="btn btn-info col-sm-3 py-2" ng-click="control.sonoPaperino()">Enter as Donal Duck</a>
-    <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoMaster()">Enter as Mkicker</a>
+    <a class="btn btn-info col-sm-3 py-2" ng-click="control.sonoPaperino()">Enter as Donal</a>
+    <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoMaster()">Enter as Mickey</a>
 
   </div>
   {{tutti_utenti|json}}
