added cordova Confirm Dialogs ssupport

--- a/burps/animalmap.html
+++ b/burps/animalmap.html
@@ -48,7 +48,7 @@ range:
 <input class="form-control" type="number" value="5" ng-model="input.range" ng-change="main.updateRange(input)"> username:{{user_error}}
 {{main.client.image}}
 <input class="form-control" type="text" ng-model="main.client.clientId">
-<btn class="btn btn-info" ng-click="main.save()">SALVA</btn>
+<button class="btn btn-info" ng-click="main.save()">SALVA</button>
 <!-- <div class="row">
     <a class="btn btn-primary col-sm-3" ng-click="setId('fish0')">FISH 0 </a>
     <a class="btn btn-primary col-sm-3" ng-click="setId('1234567890')">1234567890</a>
