--- a/chat/room.html
+++ b/chat/room.html
@@ -5,11 +5,11 @@
 
 <div class="card card-block py-2" >
   <h1 class="text-white bg-info mx-auto px-2" >Nice to meet you, fish</h1>
-  <input placeholder="Pick a username." type="text" class="mx-auto m-2 form-control" ng-model="control.username">
-  <span class="text-warning">{{chat_error}}</span>
+  ENTRA COME: <input placeholder="Pick a username." type="text" class="mx-auto m-2 form-control" ng-model="control.username">
+  <div class="p-2 bg-secondary"<h2 class="text-warning">{{chat_error}}</h2></div>
   <div class="row col-sm-6 col-lg-12 px-2 mt-2">
     <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoUser(control.username)">ENTRA</a>
-    <a class="btn btn-info col-sm-3 py-2" ng-click="control.sonoPaperino()">Enter as Donal</a>
+    <a class="btn btn-info col-sm-3 py-2" ng-click="control.sonoPaperino()">Enter as Donald@ Duck</a>
     <a class="btn btn-success col-sm-3 py-2" ng-click="control.sonoMaster()">Enter as Mickey</a>
 
   </div>
