--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
 </style>
 <body style="background-color:#CCC">
   <cl-navbar></cl-navbar>
+  <button class="btn btn-primary .confirmDialog">CONFIRM</button>
   <div class="btn-group" >
     <a href="{{route_1}}"  class="btn btn-info">LINK1{{route_1}}</a>
     <a href="{{route_2}}"  class="btn btn-info">LINK</a>
     <a href="{{route_3}}"  class="btn btn-info">LIN</a>
     <a href="{{route_4}}"  class="btn btn-info">LI</a>
+    <a href="{{route_5}}"  class="btn btn-info">KIKASS</a>
   </div>
 
   <div class="container">
@@ -116,4 +118,8 @@
 <script src="burps/burps.js"></script>
 
 <script src="kikass/kikass.js"></script>
+<script src="cordova.js"></script>
+<script src="app/dialogs.js"></script>
+<script src="index.js"></script>
+
 </html>
