--- a/movie/movieDetail.html
+++ b/movie/movieDetail.html
@@ -128,7 +128,7 @@ img {
 
     </div>
     <div class="pull-right nav-item">
-      <i class="fa fa-sort fa-2x"></i>
+      <i class="fa fa-arrow-down fa-2x"></i>
     </div>
   </div>
 </div>
