some minore important changes to prodlaunch yaya!

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   }
 </style>
 <body style="background-color:#CCC">
+  <img class="mx-auto text-sm-center col-4"  ng-if="!splashLoad" src="images/loading.gif">
   <cl-navbar></cl-navbar>
   <button class="btn btn-primary .confirmDialog">CONFIRM</button>
   <div class="btn-group" >
