--- a/homeComponent/404.html
+++ b/homeComponent/404.html
@@ -1,7 +1,7 @@
 <div class="card card-block">
   <div class="text-center">
 
-    <span style="font-size:200px">404</span>
+    <h1><span >404</span></h1>
     <h1>Page not found.</h1>
     <div class="separator" style="width:50%"></div>
     <h1>Or ... You are trying to hack my page ? </h1>
