--- a/homeComponent/500.html
+++ b/homeComponent/500.html
@@ -1,4 +1,4 @@
-<div class="text-center" style="font-size:5em;">
+<div class="text-sm-center" style="font-size:3em;">
   <span style="color:grey" >Unauthorized.</span>
   <span><a href="#home" style="color:#aaa;hover:#c4c">Please Try Again</a></span>
 </div>
